tests/invalid/While_Invalid_1.whiley
import * from whiley.lang.*

method main() -> int:
    int j = 0
    int i
    //
    while j < 10:
        i = 1
        j = j + 1
    return i
